0031041: Modeling Algorithms - Crash in BRepOffsetAPI_MakePipeShell

Since some part of the code was commented, the TheV contains just an initial value and we don't have to execute the code under contions "if(!TheV.IsNull())" because this code expects not initial value in the TheV.